--- a/src/dev/index.html
+++ b/src/dev/index.html
@@ -15,7 +15,7 @@
       <input type="button" value="Redirect Me" onclick="redirect();" />
     </form>
     <!--
-    <script type="text/javascript" src="../bundle.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./bundle.js" charset="utf-8"></script>
     -->
   </body>
 </html>
